<resources>
    <string name="app_name">Connview</string>
    <string name="action_settings">Log Out</string>
    <string name="loginPasswordPL">***********</string>
    <string name="loginUNPL">Username</string>
    <string name="avatar_des">User Avatar</string>
    <string name="tvPacketCount">Count: </string>
    <string name="tvPacketSize">Size: </string>
    <string name="tvTargetPing">Target IP:</string>
    <string name="targetPingPlaceHolder">127.0.0.1</string>
    <string name="tvTitleIP">IP:   </string>
    <string name="tvTitlePubIP">IP:   </string>
    <string name="tvTitleMAC">MAC:  </string>


    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_tools">Utilities</string>


    <string name="title_fragment_IPINFO">IP Info</string>
    <string name="title_fragment_NETSCAN">Net Scan</string>
    <string name="title_fragment_UTILITIES">Utilities</string>
    <string name="title_fragment_PROFILE">Profile</string>
    <string name="title_fragment_CONFIGS">Configurations</string>


    <string name="txtIsConnected">Connected!</string>
    <string name="txtIsNotConnected">No Connection!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_dnslookup">DNSLookup</string>
    <string name="title_activity_ping">Pinger</string>
    <string name="title_activity_portscan">PortScanner</string>
    <string name="title_activity_traceroute">WhoIs</string>
    <string name="loginEmailPL">Email</string>
    <string name="lblRegistration">Register Your Account!</string>
    <string name="loginContextLabel">Get to know your network.</string>
    <string name="pwRegisterPL">password</string>
    <string name="etRegisterName">Name</string>
    <string name="etRegisterEmail">Email</string>
    <string name="tvPortScanResultsPL">Ready to scan <b>Multiple ports</b>.</string>
    <string name="tvPortScanResultsPL2">Ready to scan <b>Single port</b>.</string>
    <string name="tvSinglePort">Target Port:</string>
    <string name="TargetPortPL">443</string>
    <string name="TargetDnsNamePL">google.com</string>
    <string name="tvTargetDnsName">Domain:</string>
    <string name="dnsResults">Awaiting DNS Query...</string>
    <string name="recordTypePL">Record Type:</string>
    <string name="NameServerType">Name Server</string>
    <string name="tvTargetWhois">Domain:</string>
    <string name="etTargetWhoisPL">google.com</string>
    <string name="whoisResults">Awaiting Whois Results...</string>
    <string name="etServerPL">whois.internic.net</string>
    <string name="tvServerPL">Server:</string>
    <string name="titleipInfoNetwork">Network Summary</string>
    <string name="labelSSID">SSID:    </string>
    <string name="labelNetmask">Mask:    </string>
    <string name="tvNullNetPL">----</string>
    <string name="labelFrequency">Freq:    </string>
    <string name="labelSignal">Signal:    </string>
    <string name="labelBroadCast">Bcast:    </string>
    <string name="labelBSSID">BSSID:    </string>
    <string name="labelNetIP">Net Address:</string>
    <string name="profileFaveNetwork">Top Network:</string>
    <string name="profileRecentNetworks">Recent Networks</string>
    <string name="profileConfigsList">Empty...</string>
    <string name="comingSoon">Feature Comming soon....sit tight.</string>


</resources>
