<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundContent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.milkymac.connview_main.WhoisActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/traceroute_appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/traceroute_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"></android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardCornerRadius="@dimen/appbar_padding_top"
        app:cardBackgroundColor="@color/cardContent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvTargetWhois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/tvTargetWhois"
                    android:textColor="@color/textContent"
                    android:textSize="@dimen/text_conform1"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/etTargetWhois"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:ems="6"
                    android:inputType="textPersonName"
                    android:paddingStart="8dp"
                    android:text="@string/etTargetWhoisPL"
                    android:textColor="@color/textContent"
                    android:textSize="@dimen/text_conform1"
                    android:theme="@style/EditTextTheme" />

                <ImageButton
                    android:id="@+id/btnQueryWhois"
                    style="@android:style/Widget.Material.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/cardContent"
                    android:scaleType="fitCenter"
                    android:tint="?android:attr/colorPressedHighlight"
                    app:srcCompat="@android:drawable/ic_menu_compass" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/tvServerPL"
                    android:textColor="@color/textContent"
                    android:textSize="@dimen/text_conform2"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/etServer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:ems="8"
                    android:inputType="textPersonName"
                    android:paddingStart="10dp"
                    android:text="@string/etServerPL"
                    android:textColor="@color/textContent"
                    android:textSize="@dimen/text_conform2"
                    android:theme="@style/EditTextTheme" />

                <ImageButton
                    android:id="@+id/btnServerInfo"
                    style="@android:style/Widget.DeviceDefault.ImageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:background="@color/cardContent"
                    android:scaleType="matrix"
                    android:tint="@color/common_google_signin_btn_text_dark_disabled"
                    app:srcCompat="@android:drawable/ic_menu_info_details" />
            </LinearLayout>


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tvWhoisResults"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/whoisResults"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

            </ScrollView>
        </LinearLayout>

</LinearLayout>
