<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/backgroundContent"
    android:layout_height="match_parent"
    tools:context="com.example.milkymac.connview_main.ProfileActivity$ProfileMainFragment">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/cardContent"
                        app:cardCornerRadius="@dimen/appbar_padding_top">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="11dp"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="vertical">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/launcher_trycon"/>


                            <TextView
                                android:id="@+id/profileEmail"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Root@root.com"
                                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                android:textColor="@color/textContent"
                                android:textSize="22sp"
                                android:textStyle="bold" />



                            <TextView
                                android:id="@+id/lblTopNet"
                                android:layout_marginTop="10dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/profileFaveNetwork"
                                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                android:textColor="@color/textContent"
                                android:textSize="22sp"
                                android:textStyle="bold"
                                android:typeface="normal" />

                            <TextView
                                android:id="@+id/tvTopNet"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/tvNullNetPL"
                                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                                android:textColor="@color/textContent"
                                android:textSize="20sp"
                                android:typeface="normal" />

                    </LinearLayout>
                    </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_marginTop="16dp"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/cardContent"
                    app:cardCornerRadius="@dimen/appbar_padding_top">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:layout_gravity="center"
                        android:layout_margin="11dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/lblProfileRecentNetworks"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:text="@string/profileRecentNetworks"
                            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:textColor="@color/textContent"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            android:typeface="normal"/>

                        <ListView
                            android:id="@+id/lvRecentNet"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"></ListView>


                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>


        </ScrollView>
</RelativeLayout>
